infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elara-ingress
  namespace: elara-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: elara-app.local
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-nest-service
                port:
                  number: 80
          - path: /ai/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-ai-service
                port:
                  number: 80
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
